--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: Hospital
-          image: ImageName
+          image: verbose2001/test:9
           ports:
             - containerPort: 8080
 
