--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Hospital
+  name: hospital
   labels:
-    app: Hospital
+    app: hospital
 
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: Hospital
+      app: hospital
   
   template:
     metadata:
       labels:
-        app: Hospital
+        app: hospital
 
     spec:
       containers:
-        - name: Hospital
+        - name: hospital
           image: verbose2001/test:9
           ports:
             - containerPort: 8080
@@ -28,7 +28,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: Hospital
+  name: hospital
 spec:
   ports:
   - port: 8080
@@ -36,5 +36,5 @@ spec:
     protocol: TCP
   
   selector:
-    app: Hospital
+    app: hospital
   type: LoadBalancer
