--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,44 +2,43 @@ name: CI_pipeline
 
 on:
   push:
-	branches: ["main"]
+    branches: [ main ]
 	
 jobs:
   Build_and_upload:
-	runs-on: ubuntu-latest
-	strategy:
-	  metrix:
-	    java-version: [17]
-		
-	
-	steps:
-	- name : set-up_python_env
-	  uses: actions/setup-java@v5
-	  with:
-	    java-version: ${{metrix.java-version}}
-	  
-	- name: Checkout
-	  uses: actions/checkout@v4
-	  
-	- name: build
-	  run: |
-		mvn -B package --file pom.xml
-		mkdir staging && cp /target/*.jar staging
-		
-	- name: upload
-	  uses: actions/upload-artifacts@v4
-	  with:
+    runs-on: ubuntu-latest
+    strategy:
+      metrix:
+        java-version-strategy: [17]
+      
+    steps:
+    - name : set-up_python_env
+      uses: actions/setup-java@v5
+      with:
+        java-version: ${{metrix.java-version-strategy}}
+    
+    - name : Git_checkout
+      uses: actions/checkout@v4
+      
+    - name: build
+      run: |
+        mvn -B package --file pom.xml
+	mkdir staging && cp /target/*.jar stagin
+
+    - name: upload
+      uses: actions/upload-artifacts@v4
+      with:
         name: my-artifact
         path: target/*.jar
 	
   Build_download:
-	runs-on: [ubuntu-linunx]
-	needs: Build_and_upload
+    runs-on: [ubuntu-linunx]
+    needs: Build_and_upload
 	
-	steps:
-	- name: download_the_artifact
-	  uses: actions/download-artifacts@v4
-	  with:
-	    name: my-artifact
-		path: ./artifacts
-	  run: echo 'Artifacts downloaded!!'
+      steps:
+      - name: download_the_artifact
+	uses: actions/download-artifacts@v4
+	with:
+	  name: my-artifact
+	  path: ./artifacts
+	run: echo 'Artifacts downloaded!!'
