--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,44 +4,40 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout_code
         uses: actions/checkout@v4
-      
-      - name: Set up JDK 17
+
+      - name: setup jdk 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      
-      - name: Maven_build
-        run: |
-          mvn -B test --file pom.xml
-          mvn -B package --file pom.xml
-          mkdir build-artifacts && cp -r target/*.war build-artifacts/
 
-        
-      - name: upload-artifacts
+      - name: Build with maven
+        run: |
+          mvn -B clean test --file pom.xml
+          mvn -B package --file pom.xml
+          mkdir application && cp target/*.war application
+      
+      - name: upload the artifacts
         uses: actions/upload-artifact@v4
         with:
-          file: build-artifacts/*.war
-          path: build-artifacts
+          filename: application/*.war
+          path: application
 
-  download:
+  Download_job:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Download-artifacts
+      - name: Download the artifact
         uses: actions/download-artifact@v4
         with:
-          file: build-artifacts/*.war
-          path: build-artifacts
+          filename: application/*.war
+          path : application
