--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: self-hosted
     env:
       BUILD_NUMBER: ${{ github.run_number }}
-      DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
     steps:
       - name: checkout_code
@@ -25,6 +26,6 @@ jobs:
           
       - name: docker_upload
         run: |
-          docker tag hospital_management verbose2001/hospital_management:${BUILD_NUMBER}
-          echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u "$DOCKER_USERNAME" --password-stdin
-          docker push verbose2001/hospital_management:${BUILD_NUMBER}
+          docker tag hospital_management verbose2001/hospital_management:$BUILD_NUMBER
+          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+          docker push verbose2001/hospital_management:$BUILD_NUMBER
